--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -1,3 +1,194 @@
 // Place all the styles related to the Ropes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  background-image: image-url("backgroundsmile.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+a, a:hover, a:visited {
+ text-decoration: none;
+}
+
+h1 {
+ font-family: Tahoma, serif;
+ color: #8A2BE2;
+ text-align: center;
+ text-shadow: 2px 4px #008080;
+ margin-top: 50px;
+ font-size: 50px;
+}
+
+.tableau {
+ width: 70%;
+ margin:auto;
+ background-color: rgba(255, 240, 240, 0.3);
+ margin-bottom: 75px;
+ font-family: Tahoma, serif;
+ border-radius: 20px;
+ box-shadow: 1px 1px 2px;
+ color: black;
+ font-size: 15px;
+
+}
+
+.tableau table {
+ padding: 50px;
+ margin: auto;
+
+}
+
+.tableau table tbody {
+ border: black solid 1px;
+ word-break: break-all;
+ text-align: center;
+}
+
+.new_rope_link {
+ text-align: center;
+ margin:auto;
+ background-color: #8A2BE2;
+ box-shadow: 2px 4px #008080;
+ border-radius: 10px;
+ width:100px;
+ height:20px;
+ font-family: Tahoma, serif;
+}
+
+.tableau table tbody tr,td {
+ border-radius: 8px;
+ background-color: rgba(255, 250, 240, 0.2);
+ text-align: center;
+ vertical-align: middle;
+}
+
+.back {
+ font-family: Tahoma, serif;
+ text-align: center;
+ margin:auto;
+ background-color: #8A2BE2;
+ box-shadow: 2px 4px #008080;
+ border-radius: 10px;
+ width:100px;
+ height:20px;
+}
+
+.back a,.show_link a,.back_link a,.edit_link a {
+ color: white;
+}
+
+.newr {
+ width: 50%;
+ margin:auto;
+ background-color: rgba(255, 240, 240, 0.3);
+ margin-bottom: 75px;
+ font-family: Tahoma, serif;
+ border-radius: 20px;
+ box-shadow: 1px 1px 2px;
+ color: black;
+ padding: 20px;
+ font-family: Tahoma, serif;
+
+}
+
+.field {
+ text-align: center;
+ margin: 10px;
+ font-family: Tahoma, serif;
+ font-size: 15px;
+ font-weight: bold;
+ padding: 20px;
+}
+
+.actions {
+ text-align: center;
+ font-family: Tahoma, serif;
+ padding: 20px;
+}
+
+.showing {
+ width: 70%;
+ margin:15%;
+ background-color: rgba(255, 240, 240, 0.3);
+ margin-bottom: 75px;
+ font-family: Tahoma, serif;
+ border-radius: 20px;
+ box-shadow: 1px 1px 2px;
+ color: black;
+ font-size: 15px;
+ text-align: center;
+ padding: 25px;
+}
+
+.editing {
+  width: 70%;
+  margin:auto;
+  background-color: rgba(255, 240, 240, 0.3);
+  margin-bottom: 75px;
+  font-family: Tahoma, serif;
+  border-radius: 20px;
+  box-shadow: 1px 1px 2px;
+  color: black;
+  font-size: 15px;
+
+}
+
+.show_link,.back_link,.edit_link {
+  text-align: center;
+  margin:auto;
+  background-color: #8A2BE2;
+  box-shadow: 2px 4px #008080;
+  border-radius: 10px;
+  width:100px;
+  height:20px;
+  font-family: Tahoma, serif;
+  display:inline-block;
+}
+
+
+.edit_links {
+ text-align: center;
+}
+
+.log_in_page,.sign_up_page,.password_page {
+ font-family: Tahoma, serif;
+ text-align: center;
+ color: #8A2BE2;
+ text-shadow: 2px 4px #008080;
+ margin-top: 100px;
+ font-size: 50px;
+}
+
+.log_in_page_body,.sign_up_page_body,.password_page_body {
+ width: 70%;
+ margin:auto;
+ background-color: rgba(240, 248, 255, 0.3);
+ margin-bottom: 75px;
+ font-family: Tahoma, serif;
+ border-radius: 20px;
+ box-shadow: 1px 1px 2px;
+ color: black;
+ font-size: 15px;
+
+}
+
+.password_page_body {
+ padding-bottom: 30px;
+}
+
+.down_links {
+ display: inline-block;
+ text-align: center;
+ width: 50%;
+ margin-left: 25%;
+ margin-right: 25%;
+}
+
+.disconnect_link {
+ margin-left: 90%;
+ width: 10%;
+}
