--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="password_page">Forgot your password?</h2>
+<h2 class="password_page">Vous avez oublié votre mot de passe ?</h2>
 
 <div class="password_page_body">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
