--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -8,6 +8,7 @@ body {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+
 }
 
 a, a:hover, a:visited {
@@ -15,17 +16,18 @@ a, a:hover, a:visited {
 }
 
 h1 {
- font-family: Tahoma, serif;
+ font-family: 'Oswald', sans-serif;
  color: #8A2BE2;
  text-align: center;
  text-shadow: 2px 4px #008080;
  margin-top: 50px;
  font-size: 50px;
+ margin-bottom: 75px;
 }
 
 .tableau {
  width: 70%;
- margin:auto;
+ margin: auto;
  background-color: rgba(255, 240, 240, 0.3);
  margin-bottom: 75px;
  font-family: Tahoma, serif;
@@ -160,7 +162,7 @@ h1 {
  color: #8A2BE2;
  text-shadow: 2px 4px #008080;
  margin-top: 100px;
- font-size: 50px;
+ font-size: 3em;
 }
 
 .log_in_page_body,.sign_up_page_body,.password_page_body {
@@ -191,4 +193,15 @@ h1 {
 .disconnect_link {
  margin-left: 90%;
  width: 10%;
+}
+
+.champs {
+  border-radius: 5px;
+  border: 1px rgb(240, 248, 255) solid;
+}
+
+.champs:focus {
+  border: none;
+
+
 }
