--- a/app/views/ropes/edit.html.erb
+++ b/app/views/ropes/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="disconnect_link">
   <%= link_to 'Disconnect',destroy_user_session_path, method: :delete %>
 </div>
-<h1>Editing Rope</h1>
+<h2>Modifier</h2>
 
 <div class="editing">
 <%= render 'form', rope: @rope %>
