--- a/app/views/ropes/index.html.erb
+++ b/app/views/ropes/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <div class="disconnect_link">
-  <%= link_to 'Disconnect',destroy_user_session_path, method: :delete %>
+  <%= link_to 'Déconnection',destroy_user_session_path, method: :delete %>
 </div>
 <h1>ROPES</h1>
 <div class="tableau">
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nom</th>
       <th>Rope</th>
       <th colspan="3"></th>
     </tr>
@@ -19,9 +19,9 @@
       <tr>
         <td style="width: 80px"><%= rope.Name %></td>
         <td style="width: 450px"><%= rope.Rope %></td>
-        <td><%= link_to 'Show', rope %></td>
-        <td><%= link_to 'Edit', edit_rope_path(rope) %></td>
-        <td><%= link_to 'Destroy', rope, method: :delete, data: { confirm: 'Are you sure ?' } %></td>
+        <td><%= link_to 'Montrer', rope %></td>
+        <td><%= link_to 'Modifier', edit_rope_path(rope) %></td>
+        <td><%= link_to 'Supprimer', rope, method: :delete, data: { confirm: 'Are you sure ?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,5 +30,5 @@
 <br>
 </div>
 <div class="new_rope_link">
-<%= link_to 'New Rope', new_rope_path, style: 'vertical-align:center;color:white;'%>
+<%= link_to 'Nouvelle Rope', new_rope_path, style: 'vertical-align:center;color:white;'%>
 </div>
