--- a/app/views/ropes/index.html.erb
+++ b/app/views/ropes/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="disconnect_link">
-  <%= link_to 'Déconnection',destroy_user_session_path, method: :delete %>
+  <%= link_to 'Déconnexion',destroy_user_session_path, method: :delete %>
 </div>
 <h1>ROPES</h1>
 <div class="tableau">
