--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -2,14 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body {
-  background-image: image-url("backgroundsmile.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
 
-}
 
 a, a:hover, a:visited {
  text-decoration: none;
@@ -17,12 +10,12 @@ a, a:hover, a:visited {
 
 h1 {
  font-family: 'Oswald', sans-serif;
- color: #8A2BE2;
+ color: white;
  text-align: center;
  text-shadow: 2px 4px #008080;
  margin-top: 50px;
  font-size: 50px;
- margin-bottom: 75px;
+ margin-bottom: 155px;
 }
 
 .tableau {
@@ -108,9 +101,10 @@ h1 {
 
 .actions {
  text-align: center;
- font-family: Tahoma, serif;
+ font-family: 'Oswald', sans-serif;
  padding: 20px;
 }
+
 
 .showing {
  width: 70%;
@@ -157,22 +151,22 @@ h1 {
 }
 
 .log_in_page,.sign_up_page,.password_page {
- font-family: Tahoma, serif;
+ font-family: 'Oswald', sans-serif;
  text-align: center;
- color: #8A2BE2;
+ color: white;
  text-shadow: 2px 4px #008080;
  margin-top: 100px;
  font-size: 3em;
 }
 
 .log_in_page_body,.sign_up_page_body,.password_page_body {
- width: 70%;
+ width: 30%;
  margin:auto;
  background-color: rgba(240, 248, 255, 0.3);
  margin-bottom: 75px;
- font-family: Tahoma, serif;
- border-radius: 20px;
- box-shadow: 1px 1px 2px;
+ font-family: 'Oswald', sans-serif;
+ border-radius: 15px;
+ box-shadow: #008080 1px 1px 2px;
  color: black;
  font-size: 15px;
 
@@ -185,9 +179,11 @@ h1 {
 .down_links {
  display: inline-block;
  text-align: center;
+ font-family: 'Oswald', sans-serif;
  width: 50%;
  margin-left: 25%;
  margin-right: 25%;
+ color: white;
 }
 
 .disconnect_link {
@@ -198,10 +194,26 @@ h1 {
 .champs {
   border-radius: 5px;
   border: 1px rgb(240, 248, 255) solid;
+  color: black;
 }
 
 .champs:focus {
-  border: none;
+  border: 1px solid #008080;
+  background-color: transparent;
+  color: white;
+  font-family: 'Oswald', sans-serif;
+  height: auto;
+  width: auto;
+  font-size: 1em;
 
+}
 
+.connect {
+  width: 100%;
+  height: 100%;
+  background-image: image-url("joy.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
