--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,34 @@
-<h2 class="sign_up_page">Sign up</h2>
+<body class="connect">
+<h1>SMILE</h1>
+
 
 <div class="sign_up_page_body">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.label :Email %><br />
+    <%= f.email_field :email, autofocus: true, placeholder: 'Email', class: 'champs' %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :Mot_de_passe %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> charactères minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: 'Mot de passe', class: 'champs' %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :Confirmez_votre_mot_de_passe %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Confirmation', class: 'champs' %>
   </div>
 </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "S'inscrire" %>
   </div>
 <% end %>
 
 <div class="down_links"><%= render "devise/shared/links" %></div>
+</div>
