--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -195,6 +195,7 @@ h1 {
   border-radius: 5px;
   border: 1px rgb(240, 248, 255) solid;
   color: black;
+  background-color: transparent;
 }
 
 .champs:focus {
