--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
   <div class="field">
     <%= f.label :Email %><br />
-    <%= f.email_field :email, autofocus: true, placeholder: 'Email', class: 'champs' %>
+    <%= f.email_field :email, autofocus: true, placeholder: 'Email', style: 'text-align: center' class: 'champs' %>
   </div>
 
   <div class="field">
@@ -16,12 +16,12 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> charactères minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", placeholder: 'Mot de passe', class: 'champs' %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: 'Mot de passe', style: 'text-align: center' class: 'champs' %>
   </div>
 
   <div class="field">
     <%= f.label :Confirmez_votre_mot_de_passe %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Confirmation', class: 'champs' %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Confirmation', style: 'text-align: center' class: 'champs' %>
   </div>
 </div>
 
