changement css 3 devise

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,9 +11,9 @@
 </div>
 
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+
+    <%= f.submit "Renouveler mon mot de passe", class: 'actions', style: 'width: auto; margin-left: 43%' %>
+
 <% end %>
 
 <div class="down_links"><%= render "devise/shared/links" %></div>
