--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -12,9 +12,9 @@ h1 {
  font-family: 'Oswald', sans-serif;
  color: white;
  text-align: center;
- text-shadow: 2px 4px #008080;
+ text-shadow: 3px 6px #008080;
  margin-top: 50px;
- font-size: 50px;
+ font-size: 5em;
  margin-bottom: 155px;
 }
 
@@ -102,9 +102,26 @@ h1 {
 .actions {
  text-align: center;
  font-family: 'Oswald', sans-serif;
- padding: 20px;
+ padding: 5px;
+ background-color: transparent;
+ color: #008080;
+ border: none;
+ font-size: 1.3em;
+ width: 10%;
+ margin-left: 45%;
+ margin-right: 45%;
+ margin-bottom: 50px;
+ border: white solid 1px;
+ border-radius: 15px;
+ transition: 0.2s;
 }
 
+.actions:hover {
+  background-color: #008080;
+  border-radius: 15px;
+  color: white;
+  border: none;
+}
 
 .showing {
  width: 70%;
@@ -163,7 +180,7 @@ h1 {
  width: 30%;
  margin:auto;
  background-color: rgba(240, 248, 255, 0.3);
- margin-bottom: 75px;
+ margin-bottom: 20px;
  font-family: 'Oswald', sans-serif;
  border-radius: 15px;
  box-shadow: #008080 1px 1px 2px;
@@ -196,6 +213,7 @@ h1 {
   border: 1px rgb(240, 248, 255) solid;
   color: black;
   background-color: transparent;
+  transition: 0.4s;
 }
 
 .champs:focus {
@@ -217,4 +235,8 @@ h1 {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.checkbox:focus {
+  background-color: transparent;
 }
