--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Salut <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Vous avez demandé à changer votre mot de passe. Vous pouvez le faire sur le lien suivant : </p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si vous n'avez pas demandé à changer, ignorez cet email.</p>
+<p>Votre mot de passe ne changera pas tant que vous ne cliquez pas sur le lien ci-dessus et en créez un nouveau.</p>
