--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -15,32 +15,55 @@ h1 {
  text-shadow: 3px 6px #008080;
  margin-top: 50px;
  font-size: 5em;
- margin-bottom: 155px;
+ margin-bottom: 40px;
 }
 
-.tableau {
- width: 70%;
- margin: auto;
- background-color: rgba(255, 240, 240, 0.3);
- margin-bottom: 75px;
- font-family: Tahoma, serif;
- border-radius: 20px;
- box-shadow: 1px 1px 2px;
- color: black;
- font-size: 15px;
+.spaced {
+  margin-bottom: 175px;
+}
+
+.intro {
+  text-align: center;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 140px;
+}
+.ropes {
+  width: 98%;
+  height: 98%;
+  background-image: image-url("bgropes.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 
 }
 
-.tableau table {
- padding: 50px;
- margin: auto;
-
+.rope {
+  width: 600px;
+  border-radius: 10px;
+  margin: auto;
+  margin-bottom: 50px;
+  background-color: rgba(0, 133, 130, 0.45);
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+  color: white;
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+  word-wrap: break-word;
 }
 
-.tableau table tbody {
- border: black solid 1px;
- word-break: break-all;
- text-align: center;
+.option {
+text-align: center;
+margin-top: 40px;
+}
+
+.option a:hover {
+text-decoration: none;
+background-color: transparent;
+filter: invert(100%);
+
 }
 
 .new_rope_link {
@@ -54,12 +77,6 @@ h1 {
  font-family: Tahoma, serif;
 }
 
-.tableau table tbody tr,td {
- border-radius: 8px;
- background-color: rgba(255, 250, 240, 0.2);
- text-align: center;
- vertical-align: middle;
-}
 
 .back {
  font-family: Tahoma, serif;
@@ -206,6 +223,12 @@ h1 {
 .disconnect_link {
  margin-left: 90%;
  width: 10%;
+}
+
+.disconnect_link a:hover {
+  text-decoration: none;
+  background-color: transparent;
+  filter: invert(100%);
 }
 
 .champs {
