--- a/app/views/ropes/index.html.erb
+++ b/app/views/ropes/index.html.erb
@@ -1,34 +1,30 @@
-<p id="notice"><%= notice %></p>
+<body class="ropes">
+    <p id="notice"><%= notice %></p>
+    <div class="disconnect_link">
+        <%= link_to image_tag("out.png", style:'height: 30px;'), destroy_user_session_path, method: :delete %>
+    </div>
+    <h1>ROPES</h1>
+<p class="intro"><em>Echangez des phrases de soutien et semez du bonheur</em></p>
+        <% @ropes.each do |rope| %>
 
-<div class="disconnect_link">
-  <%= link_to 'Déconnexion',destroy_user_session_path, method: :delete %>
+        <div class="rope">
+            <%= rope.Rope %>
+        </br>
+    </br>
+    <em>by
+    </em>
+    <%= rope.Name %>
+    <div class="option">
+        <%= link_to image_tag("eye.png", style:'height: 20px;'), rope, style:'padding: 10px;' %>
+        <%= link_to image_tag("pencil.png", style:'height: 20px;'), edit_rope_path(rope), style:'padding: 10px;' %>
+        <%= link_to image_tag("trash.png", style:'height: 20px;'), rope, method: :delete, data: { confirm: 'Voulez vous supprimer cette corde ?' }, style:'padding: 10px;' %>
+    </div>
 </div>
-<h1>ROPES</h1>
-<div class="tableau">
-<table>
-  <thead>
-    <tr>
-      <th>Nom</th>
-      <th>Rope</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @ropes.each do |rope| %>
-      <tr>
-        <td style="width: 80px"><%= rope.Name %></td>
-        <td style="width: 450px"><%= rope.Rope %></td>
-        <td><%= link_to 'Montrer', rope %></td>
-        <td><%= link_to 'Modifier', edit_rope_path(rope) %></td>
-        <td><%= link_to 'Supprimer', rope, method: :delete, data: { confirm: 'Are you sure ?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% end %>
 
 <br>
 </div>
 <div class="new_rope_link">
 <%= link_to 'Nouvelle Rope', new_rope_path, style: 'vertical-align:center;color:white;'%>
 </div>
+</body>
