--- a/app/assets/stylesheets/ropes.scss
+++ b/app/assets/stylesheets/ropes.scss
@@ -94,17 +94,31 @@ filter: invert(100%);
 }
 
 .newr {
- width: 50%;
+ width: 600px;
  margin:auto;
- background-color: rgba(255, 240, 240, 0.3);
+ margin-top: -20px;
+ background-color: rgba(0, 133, 130, 0.45);
  margin-bottom: 75px;
  font-family: Tahoma, serif;
- border-radius: 20px;
- box-shadow: 1px 1px 2px;
+ border-radius: 10px;
  color: black;
  padding: 20px;
- font-family: Tahoma, serif;
+ font-family: 'Oswald', sans-serif;
+}
 
+.create {
+  color: black;
+  font-family: 'Oswald', sans-serif;
+  border: 1px solid black;
+  background-color: rgb(0, 133, 130);
+  border-radius: 10px;
+  font-size: 1.1em;
+  transition: 0.2s;
+}
+
+.create:hover {
+  color: white;
+  border: 1px solid white;
 }
 
 .field {
