--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,12 +7,12 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :Email, style: 'font-family: Oswald, sans-serif' %><br />
+    <%= f.label :email, "Email", style: 'font-family: Oswald, sans-serif' %><br />
     <%= f.email_field :email, autofocus: true, placeholder: 'Email', style: 'text-align: center', class: 'champs' %>
   </div>
 
   <div class="field">
-    <%= f.label :Mot_de_passe, style: 'font-family: Oswald, sans-serif' %>
+    <%= f.label :password, "Mot de passe", style: 'font-family: Oswald, sans-serif' %>
     <% if @minimum_password_length %>
     (<%= @minimum_password_length %> charactères minimum)
     <% end %><br />
@@ -20,7 +20,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :Confirmez_votre_mot_de_passe, style: 'font-family: Oswald, sans-serif'%><br />
+    <%= f.label :password_confirmation, "Confirmez votre mot de passe", style: 'font-family: Oswald, sans-serif'%><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Confirmation', style: 'text-align: center', class: 'champs' %>
   </div>
 </div>
